--- a/src/Terratype.TestSite/packages.config
+++ b/src/Terratype.TestSite/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AngularGoogleMaps" version="2.0.3" targetFramework="net45" />
   <package id="Archetype" version="1.9" targetFramework="net45" />
   <package id="AutoMapper" version="3.3.1" targetFramework="net45" />
   <package id="ClientDependency" version="1.9.2" targetFramework="net45" />
