--- a/src/Terratype.TestSite/packages.config
+++ b/src/Terratype.TestSite/packages.config
@@ -37,6 +37,7 @@
   <package id="MiniProfiler" version="2.1.0" targetFramework="net45" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
+  <package id="Our.Umbraco.DocTypeGridEditor" version="0.3.0" targetFramework="net45" />
   <package id="Our.Umbraco.NestedContent" version="0.3.0" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="semver" version="1.1.2" targetFramework="net45" />
