--- a/src/Terratype/Terratype.csproj
+++ b/src/Terratype/Terratype.csproj
@@ -34,7 +34,6 @@
   <ItemGroup>
     <Compile Include="CoordinateSystems\LatLng.cs" />
     <Compile Include="CoordinateSystems\Position.cs" />
-    <Compile Include="CoordinateSystems\Osgb36.cs" />
     <Compile Include="CoordinateSystems\Bd09.cs" />
     <Compile Include="CoordinateSystems\Gcj02.cs" />
     <Compile Include="CoordinateSystems\Wgs84.cs" />
@@ -48,39 +47,19 @@
     <Compile Include="Models\Size.cs" />
     <Compile Include="PropertyEditor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Providers\BingMapsV8\BingMapsV8.cs" />
-    <Compile Include="Providers\GoogleMapsV3\GoogleMapsV3.cs" />
-    <Compile Include="Providers\ProviderBase.cs" />
-    <Compile Include="Providers\LeafletV1\LeafletV1.cs" />
-    <Compile Include="Providers\OSOpenSpaceV4\OSOpenSpaceV4.cs" />
+    <Compile Include="Providers\Provider.cs" />
     <Compile Include="Providers\ProviderController.cs" />
     <Compile Include="TerratypeConverter.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Language\en-us.xml" />
-    <Content Include="Providers\grid.html" />
-    <Content Include="Providers\GoogleMapsV3\editor.apperance.html" />
-    <Content Include="Providers\GoogleMapsV3\GoogleMapsV3-Example.png" />
-    <Content Include="Providers\BingMapsV8\BingMapsV8.png" />
-    <Content Include="Providers\editor.html" />
-    <Content Include="Providers\config.html" />
-    <Content Include="Providers\GoogleMapsV3\config.apperance.html" />
-    <Content Include="Providers\GoogleMapsV3\GoogleMapsV3-Logo.png" />
-    <Content Include="Providers\GoogleMapsV3\config.definition.html" />
-    <Content Include="Providers\GoogleMapsV3\GoogleMapsV3.js" />
-    <Content Include="Providers\LeafletV1\config.setup.html" />
-    <Content Include="Providers\LeafletV1\LeafletV1.png" />
-    <Content Include="Providers\OSOpenSpaceV4\OSOpenSpaceV4-Logo.png" />
-    <Content Include="Providers\terratype.js" />
+    <EmbeddedResource Include="Lang\en-us.xml" />
+    <Content Include="Views\grid.html" />
+    <Content Include="Views\editor.html" />
+    <Content Include="Views\config.html" />
+    <Content Include="Scripts\terratype.js" />
     <None Include="app.config" />
     <None Include="package.manifest" />
     <None Include="packages.config" />
-    <Content Include="Providers\GoogleMapsV3\config.search.html" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="css\view.css">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="AutoMapper, Version=3.3.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
@@ -300,7 +279,9 @@
       <Private>True</Private>
     </Reference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Images\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
