--- a/src/Terratype/Terratype.csproj
+++ b/src/Terratype/Terratype.csproj
@@ -32,23 +32,19 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="CoordinateSystems\LatLng.cs" />
-    <Compile Include="CoordinateSystems\Position.cs" />
+    <Compile Include="Models\LatLng.cs" />
+    <Compile Include="Models\Position.cs" />
     <Compile Include="CoordinateSystems\Bd09.cs" />
     <Compile Include="CoordinateSystems\Gcj02.cs" />
     <Compile Include="CoordinateSystems\Wgs84.cs" />
-    <Compile Include="Models\Anchor.cs" />
     <Compile Include="Models\AnchorHorizontal.cs" />
     <Compile Include="Models\AnchorVertical.cs" />
-    <Compile Include="Models\ConfigIcon.cs" />
-    <Compile Include="Models\Format.cs" />
     <Compile Include="Models\Icon.cs" />
     <Compile Include="Models\Model.cs" />
-    <Compile Include="Models\Size.cs" />
     <Compile Include="PropertyEditor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Providers\Provider.cs" />
-    <Compile Include="Providers\ProviderController.cs" />
+    <Compile Include="Models\Provider.cs" />
+    <Compile Include="Controllers\AjaxController.cs" />
     <Compile Include="TerratypeConverter.cs" />
   </ItemGroup>
   <ItemGroup>
