--- a/src/Terratype.OSOpenSpaceV4/OSOpenSpaceV4.csproj
+++ b/src/Terratype.OSOpenSpaceV4/OSOpenSpaceV4.csproj
@@ -36,6 +36,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,7 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CoordinateSystems\Osgb36.cs" />
-    <Compile Include="Provider.cs" />
+    <Compile Include="OSOpenSpaceV4.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
