Removed hardcoded /umbraco/ references

--- a/src/Terratype/Terratype.csproj
+++ b/src/Terratype/Terratype.csproj
@@ -51,15 +51,13 @@
     <Compile Include="TerratypeHtml.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="App_Plugins\Terratype\Lang\en-us.xml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </EmbeddedResource>
+    <EmbeddedResource Include="App_Plugins\Terratype\Lang\en-us.xml" />
     <Content Include="App_Plugins\Terratype\readme.txt" />
-    <Content Include="App_Plugins\Terratype\1.0.0\Images\Terratype.png" />
-    <Content Include="App_Plugins\Terratype\1.0.0\Views\grid.html" />
-    <Content Include="App_Plugins\Terratype\1.0.0\Views\editor.html" />
-    <Content Include="App_Plugins\Terratype\1.0.0\Views\config.html" />
-    <Content Include="App_Plugins\Terratype\1.0.0\Scripts\terratype.js" />
+    <Content Include="App_Plugins\Terratype\1.0.1\Images\Terratype.png" />
+    <Content Include="App_Plugins\Terratype\1.0.1\Views\grid.html" />
+    <Content Include="App_Plugins\Terratype\1.0.1\Views\editor.html" />
+    <Content Include="App_Plugins\Terratype\1.0.1\Views\config.html" />
+    <Content Include="App_Plugins\Terratype\1.0.1\Scripts\terratype.js" />
     <None Include="app.config" />
     <None Include="App_Plugins\Terratype\package.manifest" />
     <None Include="packages.config" />
@@ -288,7 +286,8 @@
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>$(solutiondir)nuget\nuget.exe pack "$(ProjectPath)"
+    <PostBuildEvent>erase "$(targetdir)*.nupkg"
+$(solutiondir)nuget\nuget.exe pack "$(ProjectPath)"
 xcopy "$(targetdir)*.nupkg" "$(solutiondir)nuget\" /Y</PostBuildEvent>
   </PropertyGroup>
   <Import Project="..\..\packages\AutoMapper.3.3.1\tools\AutoMapper.targets" Condition="Exists('..\..\packages\AutoMapper.3.3.1\tools\AutoMapper.targets')" />
