--- a/src/Terratype.nuget/Terratype.nuget.csproj
+++ b/src/Terratype.nuget/Terratype.nuget.csproj
@@ -230,6 +230,14 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.EnterpriseServices" />
+    <Reference Include="Terratype, Version=1.0.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Terratype.1.0.3\lib\net45\Terratype.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Terratype.GoogleMapsV3, Version=1.0.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Terratype.GoogleMapsV3.1.0.3\lib\net452\Terratype.GoogleMapsV3.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="TidyNet, Version=1.0.0.0, Culture=neutral">
       <HintPath>..\..\packages\UmbracoCms.Core.7.5.8\lib\TidyNet.dll</HintPath>
       <Private>True</Private>
@@ -317,12 +325,34 @@
     <Content Include="App_Plugins\Terratype.GoogleMapsV3\1.0.1\Views\config.definition.html" />
     <Content Include="App_Plugins\Terratype.GoogleMapsV3\1.0.1\Views\config.search.html" />
     <Content Include="App_Plugins\Terratype.GoogleMapsV3\1.0.1\Views\editor.apperance.html" />
+    <Content Include="App_Plugins\Terratype.GoogleMapsV3\Images\Example.png" />
+    <Content Include="App_Plugins\Terratype.GoogleMapsV3\Images\Logo.png" />
+    <Content Include="App_Plugins\Terratype.GoogleMapsV3\Images\m1.png" />
+    <Content Include="App_Plugins\Terratype.GoogleMapsV3\Images\m2.png" />
+    <Content Include="App_Plugins\Terratype.GoogleMapsV3\Images\m3.png" />
+    <Content Include="App_Plugins\Terratype.GoogleMapsV3\Images\m4.png" />
+    <Content Include="App_Plugins\Terratype.GoogleMapsV3\Images\m5.png" />
+    <Content Include="App_Plugins\Terratype.GoogleMapsV3\Lang\en-us.xml" />
+    <Content Include="App_Plugins\Terratype.GoogleMapsV3\Scripts\markerclusterer.js" />
+    <Content Include="App_Plugins\Terratype.GoogleMapsV3\Scripts\markerclusterer.min.js" />
+    <Content Include="App_Plugins\Terratype.GoogleMapsV3\Scripts\Terratype.GoogleMapsV3.js" />
+    <Content Include="App_Plugins\Terratype.GoogleMapsV3\Scripts\Terratype.Renderer.js" />
+    <Content Include="App_Plugins\Terratype.GoogleMapsV3\Views\config.apperance.html" />
+    <Content Include="App_Plugins\Terratype.GoogleMapsV3\Views\config.definition.html" />
+    <Content Include="App_Plugins\Terratype.GoogleMapsV3\Views\config.search.html" />
+    <Content Include="App_Plugins\Terratype.GoogleMapsV3\Views\editor.apperance.html" />
     <Content Include="App_Plugins\Terratype\1.0.0\Images\Terratype.png" />
     <Content Include="App_Plugins\Terratype\1.0.0\Scripts\terratype.js" />
     <Content Include="App_Plugins\Terratype\1.0.0\Views\config.html" />
     <Content Include="App_Plugins\Terratype\1.0.0\Views\editor.html" />
     <Content Include="App_Plugins\Terratype\1.0.0\Views\grid.html" />
+    <Content Include="App_Plugins\Terratype\Images\Terratype.png" />
+    <Content Include="App_Plugins\Terratype\Lang\en-us.xml" />
+    <Content Include="App_Plugins\Terratype\readme.txt" />
     <Content Include="App_Plugins\Terratype\Scripts\terratype.js" />
+    <Content Include="App_Plugins\Terratype\Views\config.html" />
+    <Content Include="App_Plugins\Terratype\Views\editor.html" />
+    <Content Include="App_Plugins\Terratype\Views\grid.html" />
     <Content Include="config\grid.editors.config.js" />
     <Content Include="config\Lang\cs-CZ.user.xml" />
     <Content Include="config\Lang\da-DK.user.xml" />
