Completed Grid editor and rendereing

--- a/src/Terratype.TestSite/Terratype.TestSite.csproj
+++ b/src/Terratype.TestSite/Terratype.TestSite.csproj
@@ -432,6 +432,7 @@
     <Content Include="Views\Mappy2.cshtml" />
     <Content Include="Views\Single1.cshtml" />
     <Content Include="Views\Single2.cshtml" />
+    <Content Include="Views\GridMap.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
