--- a/src/Terratype.TestSite/Views/Web.config
+++ b/src/Terratype.TestSite/Views/Web.config
@@ -22,8 +22,14 @@
         <add namespace="System.Web.Mvc.Html"/>
         <add namespace="System.Web.Routing"/>
         <add namespace="Terratype.TestSite"/>
-      <add namespace="Umbraco.Web"/><add namespace="Umbraco.Core"/><add namespace="Umbraco.Core.Models"/><add namespace="Umbraco.Web.Mvc"/><add namespace="umbraco"/><add namespace="Examine"/><add namespace="Umbraco.Web.PublishedContentModels"/>
-      <add namespace="Our.Umbraco.PropertyConverters.Models"/>
+        <add namespace="Umbraco.Web"/>
+        <add namespace="Umbraco.Core"/>
+        <add namespace="Umbraco.Core.Models"/>
+        <add namespace="Umbraco.Web.Mvc"/>
+        <add namespace="umbraco"/>
+        <add namespace="Examine"/>
+        <add namespace="Umbraco.Web.PublishedContentModels"/>
+        <add namespace="Our.Umbraco.PropertyConverters.Models"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
@@ -37,7 +43,8 @@
       <remove name="BlockViewHandler"/>
       <add name="BlockViewHandler" path="*" verb="*" preCondition="integratedMode" type="System.Web.HttpNotFoundHandler"/>
     </handlers>
-  <validation validateIntegratedModeConfiguration="false"/></system.webServer>
+    <validation validateIntegratedModeConfiguration="false"/>
+  </system.webServer>
 
   <system.web>
     <compilation>
@@ -45,20 +52,23 @@
         <add assembly="System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
       </assemblies>
     </compilation>
-  <httpHandlers>
+    <httpHandlers>
       <add path="*" verb="*" type="System.Web.HttpNotFoundHandler"/>
-    </httpHandlers><!--
+    </httpHandlers>
+    <!--
         Enabling request validation in view pages would cause validation to occur
         after the input has already been processed by the controller. By default
         MVC performs request validation before a controller processes the input.
         To change this behavior apply the ValidateInputAttribute to a
         controller or action.
-    --><pages validateRequest="false"
-    pageParserFilterType="System.Web.Mvc.ViewTypeParserFilter, System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"
-    pageBaseType="System.Web.Mvc.ViewPage, System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"
-    userControlBaseType="System.Web.Mvc.ViewUserControl, System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
+    -->
+    <pages validateRequest="false"
+ pageParserFilterType="System.Web.Mvc.ViewTypeParserFilter, System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"
+ pageBaseType="System.Web.Mvc.ViewPage, System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"
+ userControlBaseType="System.Web.Mvc.ViewUserControl, System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
       <controls>
         <add assembly="System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" namespace="System.Web.Mvc" tagPrefix="mvc"/>
       </controls>
-    </pages></system.web>
+    </pages>
+  </system.web>
 </configuration>
