Razor now handles dynamics (Model, IPublishedProperty or string)

--- a/src/Terratype/Terratype.csproj
+++ b/src/Terratype/Terratype.csproj
@@ -54,6 +54,7 @@
     <Compile Include="TerratypeHtml.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Plugins\Terratype\Css\label.standard.css" />
     <Content Include="App_Plugins\Terratype\Views\grid.overlay.html" />
     <Content Include="App_Plugins\Terratype\Views\label.standard.html" />
     <EmbeddedResource Include="App_Plugins\Terratype\Lang\en-us.xml">
