--- a/src/Terratype.GoogleMapsV3/GoogleMapsV3.csproj
+++ b/src/Terratype.GoogleMapsV3/GoogleMapsV3.csproj
@@ -99,7 +99,7 @@
     <Content Include="App_Plugins\Terratype.GoogleMapsV3\Scripts\markerclusterer.js" />
     <Content Include="App_Plugins\Terratype.GoogleMapsV3\Scripts\markerclusterer.min.js" />
     <Content Include="App_Plugins\Terratype.GoogleMapsV3\Scripts\Terratype.GoogleMapsV3.js" />
-    <Content Include="App_Plugins\Terratype.GoogleMapsV3\Scripts\Terratype.Renderer.js" />
+    <Content Include="App_Plugins\Terratype.GoogleMapsV3\Scripts\Terratype.GoogleMapsV3.Renderer.js" />
     <Content Include="App_Plugins\Terratype.GoogleMapsV3\Views\config.apperance.html" />
     <Content Include="App_Plugins\Terratype.GoogleMapsV3\Views\config.definition.html" />
     <Content Include="App_Plugins\Terratype.GoogleMapsV3\Views\config.search.html" />
