Updated script again

--- a/docs/postgresql.conf
+++ b/docs/postgresql.conf
@@ -198,7 +198,6 @@ max_worker_processes = 4
 #min_wal_size = 80MB
 #checkpoint_completion_target = 0.5	# checkpoint target duration, 0.0 - 1.0
 #checkpoint_warning = 30s		# 0 disables
-checkpoint_segments = 20
 
 # - Archiving -
 
@@ -444,7 +443,7 @@ log_timezone = 'localtime'
 
 # - Process Title -
 
-cluster_name = '9.5/main'			# added to process titles if nonempty
+#cluster_name = ''			# added to process titles if nonempty
 					# (change requires restart)
 #update_process_title = on
 
