--- a/docs/postgresql.conf
+++ b/docs/postgresql.conf
@@ -61,7 +61,7 @@ external_pid_file = '/var/run/postgresql/9.5-main.pid'			# write an extra PID fi
 					# defaults to 'localhost'; use '*' for all
 					# (change requires restart)
 port = 5432				# (change requires restart)
-max_connections = 200			# (change requires restart)
+max_connections = 100			# (change requires restart)
 #superuser_reserved_connections = 3	# (change requires restart)
 unix_socket_directories = '/var/run/postgresql'	# comma-separated list of directories
 					# (change requires restart)
@@ -159,7 +159,7 @@ dynamic_shared_memory_type = posix	# the default is the first option
 # - Asynchronous Behavior -
 
 #effective_io_concurrency = 1		# 1-1000; 0 disables prefetching
-max_worker_processes = 4
+#max_worker_processes = 8
 
 
 #------------------------------------------------------------------------------
@@ -474,7 +474,7 @@ stats_temp_directory = '/var/run/postgresql/9.5-main.pg_stat_tmp'
 # AUTOVACUUM PARAMETERS
 #------------------------------------------------------------------------------
 
-autovacuum = off			# Enable autovacuum subprocess?  'on'
+#autovacuum = on			# Enable autovacuum subprocess?  'on'
 					# requires track_counts to also be on.
 #log_autovacuum_min_duration = -1	# -1 disables, 0 logs all actions and
 					# their durations, > 0 logs only
