Sorting out bing search - outstanding is default propergation on enter key

--- a/src/Terratype.BingMapsV8/BingMapsV8.csproj
+++ b/src/Terratype.BingMapsV8/BingMapsV8.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Content Include="App_Plugins\Terratype.BingMapsV8\Images\Example.png" />
     <Content Include="App_Plugins\Terratype.BingMapsV8\Images\Logo.png" />
     <Content Include="App_Plugins\Terratype.BingMapsV8\Lang\en-us.xml" />
     <Content Include="App_Plugins\Terratype.BingMapsV8\Scripts\Terratype.BingMapsV8.js" />
