--- a/src/Terratype.TestSite/Terratype.TestSite.csproj
+++ b/src/Terratype.TestSite/Terratype.TestSite.csproj
@@ -434,6 +434,7 @@
     <Content Include="Views\Single2.cshtml" />
     <Content Include="Views\GridMap.cshtml" />
     <Content Include="Views\Single4.cshtml" />
+    <Content Include="Views\Bing.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
